using arrays.aslist to make storage immutable