@@ -6,12 +6,13 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.Arrays;
 import java.util.List;
 
 @RestController
 public class AnimalController {
 
-    private final List<Animal> animals = List.of(
+    private final List<Animal> animals = Arrays.asList(
         new Animal("Dog", "Bobby", 10),
         new Animal("Cat", "Meow", 5),
         new Animal("Cat", "Chubby", 6),
